fixed overflow issues and plant select bug

--- a/src/components/plant-log/plantLog.css
+++ b/src/components/plant-log/plantLog.css
@@ -33,6 +33,7 @@
   display:  flex;
   flex-direction: column;
   padding: 0 1rem;
+  position: relative;
 }
 
 .task-result-container {
@@ -229,7 +230,6 @@
 .plant-menu {
   z-index: 10;
   top: 1rem;
-  width: max-content;
   right: 0;
 }
 
@@ -252,6 +252,7 @@
     width: 60%;
     align-self: center;
     text-align: left;
+    overflow-x: visible;
   }
 
   .zero-height {
@@ -273,7 +274,8 @@
   }
   
   .edit-plant-log-container {
-    margin-top: 1rem;
+    margin-top: 0rem;
+    position: relative;
   }
 
   .edit-plant-log-button {
@@ -297,10 +299,6 @@
   .task-counter,
   .plant-grid-title {
     cursor: default;
-  }
-
-  .select-menu {
-    right: auto;
   }
 
   .plant-page-container {
@@ -330,9 +328,17 @@
   }
 
   .task-results {
-    display: flex;
     flex-direction: column;
     align-items: center;
+    overflow: auto;
+  }
+
+  .task-results::after {
+    content: "";
+    position: sticky;
+    bottom: 0;
+    height: 5rem; 
+    pointer-events: none;
   }
 
   .task-element {
